--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,15 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "axios": "^1.13.6",
     "cors": "^2.8.6",
+    "discord.js": "^14.25.1",
     "dotenv": "^17.3.1",
     "express": "^5.2.1"
   }
